hanging sign base.

--- a/src/MiNET/MiNET.Console/server.conf
+++ b/src/MiNET/MiNET.Console/server.conf
@@ -15,9 +15,9 @@ MoveRenderDistance=1
 CalculateLights=true
 
 # Game mode and rules
-GameMode=Survival
+GameMode=Creative
 #GameMode=Creative
-Player.GameMode=Survival
+Player.GameMode=Creative
 CheckForSafeSpawn=true
 EnableBlockTicking=true
 EnableChunkTicking=true
