--- a/src/MiNET/MiNET.Console/server.conf
+++ b/src/MiNET/MiNET.Console/server.conf
@@ -15,9 +15,9 @@ MoveRenderDistance=1
 CalculateLights=true
 
 # Game mode and rules
-GameMode=Creative
+GameMode=Survival
 #GameMode=Creative
-Player.GameMode=Creative
+Player.GameMode=Survival
 CheckForSafeSpawn=true
 EnableBlockTicking=true
 EnableChunkTicking=true
