--- a/src/MiNET/MiNET.Console/server.conf
+++ b/src/MiNET/MiNET.Console/server.conf
@@ -14,6 +14,8 @@ MaxViewDistance=8
 MoveRenderDistance=1
 CalculateLights=true
 
+DebugMode=false
+
 # Game mode and rules
 GameMode=Survival
 #GameMode=Creative
