BlockFactory abstraction and hash runtime ids mode support.

--- a/src/MiNET/MiNET.Console/server.conf
+++ b/src/MiNET/MiNET.Console/server.conf
@@ -28,6 +28,8 @@ GameRule.DoDaylightcycle=true
 GameRule.KeepInventory=true
 ServerInfoInTitle=true
 
+BlockRuntimeIdsAreHashes=false
+
 
 PCWorldFolder=D:\Development\DOES NOT EXIST
 #Save.Enabled=true
